--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: shop_app
+name: flutter_complete_guide
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -19,7 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.5
+  provider: ^4.0.0
+  intl: ^0.15.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,7 +32,7 @@ dev_dependencies:
 
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
@@ -58,12 +59,12 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Lato 
+    - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
-        - asset: assets/fonts//Lato-Bold.ttf
-          weight: 700 
-    - family: Anton 
+        - asset: assets/fonts/Lato-Bold.ttf
+          weight: 700
+    - family: Anton
       fonts:
         - asset: assets/fonts/Anton-Regular.ttf
   #   - family: Trajan Pro
